--- a/_hwk/h01.md
+++ b/_hwk/h01.md
@@ -1,7 +1,7 @@
 ---
 num: 'h01'
 desc: 'Exceptions, Object Oriented Programming Chapter 1.11, 1.13 - 1.13.1, 1.14 - 1.15'
-ready: false
+ready: true
 assigned: 2025-04-07 08:00:00 -0700
 due: 2025-04-15 23:59:00 -0700
 ---
