homework display layout fix

--- a/_hwk/h01.md
+++ b/_hwk/h01.md
@@ -1,5 +1,6 @@
 ---
 num: 'h01'
+layout: lab
 desc: 'Exceptions, Object Oriented Programming Chapter 1.11, 1.13 - 1.13.1, 1.14 - 1.15'
 ready: true
 assigned: 2025-04-07 08:00:00 -0700
