--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -1,5 +1,6 @@
 ---
 num: 'h02'
+layout: lab
 desc: 'Inheritance, Intro to Algorithm Analysis Chapter 1.13, 3.1 - 3.3'
 ready: false
 assigned: 2025-04-14 08:00:00 -0700
