--- a/_hwk/h03.md
+++ b/_hwk/h03.md
@@ -1,5 +1,6 @@
 ---
 num: 'h03'
+layout: lab
 desc: 'Algorithm Analysis cont., Recursion Chapter 3.4 - 3.7, 5.1 - 5.6'
 ready: false
 assigned: 2025-04-21 08:00:00 -0700
