--- a/_hwk/h04.md
+++ b/_hwk/h04.md
@@ -1,5 +1,6 @@
 ---
 num: 'h04'
+layout: lab
 desc: 'Stacks, Queues, Deques, Linked Lists Chapter 4.1 - 4.7, 4.10 - 4.13, 4.15 - 4.21'
 ready: false
 assigned: 2025-04-28 08:00:00 -0700
