--- a/_hwk/h06.md
+++ b/_hwk/h06.md
@@ -1,5 +1,6 @@
 ---
 num: 'h06'
+layout: lab
 desc: 'Merge Sort, Quick Sort, Trees Chapter 6.11 - 6.12, 7.1 - 7.3'
 ready: false
 assigned: 2025-05-12 08:00:00 -0700
