--- a/_hwk/h08.md
+++ b/_hwk/h08.md
@@ -1,5 +1,6 @@
 ---
 num: 'h08'
+layout: lab
 desc: 'Binary Trees / Binary Search Trees Chapter 7.5, 7.7, 7.11 - 7.14'
 ready: false
 assigned: 2025-05-26 08:00:00 -0700
