--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -1,14 +1,15 @@
 ---
 num: 'h02'
 desc: 'Inheritance, Intro to Algorithm Analysis Chapter 1.13, 3.1 - 3.3'
-ready: false
+ready: true
+layout: lab
 assigned: 2025-04-14 08:00:00 -0700
 due: 2025-04-22 08:00:00 -0700
 ---
 
 # Instructions
 
-- Homework assignments will be done online in the Gradescope system: [https://www.gradescope.com/courses/1011615](https://www.gradescope.com/courses/1011615).
+- Homework assignments will be done online in the Gradescope system: [site.gradescope_url](site.gradescope_url).
 - Please pay close attention to the instructions, especially when asking to provide the answer
   - Many questions are autograded by the system, which does a character-by-character comparison of the correct answer and your submitted answer.
   - Please be **PRECISE** and **EXACT** in your solutions in this case, otherwise your answer will not be considered correct.
