--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -2,7 +2,7 @@
 num: 'h02'
 layout: lab
 desc: 'Inheritance, Intro to Algorithm Analysis Chapter 1.13, 3.1 - 3.3'
-ready: false
+ready: true
 assigned: 2025-04-14 08:00:00 -0700
 due: 2025-04-22 08:00:00 -0700
 ---
