--- a/_hwk/h03.md
+++ b/_hwk/h03.md
@@ -2,7 +2,7 @@
 num: 'h03'
 layout: lab
 desc: 'Algorithm Analysis cont., Recursion Chapter 3.4 - 3.7, 5.1 - 5.6'
-ready: false
+ready: true
 assigned: 2025-04-21 08:00:00 -0700
 due: 2025-04-29 08:00:00 -0700
 ---
