--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -17,6 +17,6 @@ due: 2025-04-22 23:59:00 -0700
 
 Complete and submit your answers on Gradescope for **H02** based on the textbook reading.
 
-Reading is from Chapters 1.4.6, 2.1 - 2.2.1 of the physical book or [Chapters 1.13, 3.1 - 3.3 of the electronic version](https://runestone.academy/ns/books/published/pythonds/index.html).
+Reading is from Chapters 1.4.6 (Object-Oriented Programming in Python: Defining Classes), 2.1 - 2.2.1 (2.1. Objectives; 2.2. What Is Algorithm Analysis?; 2.3. Big-O Notation) of the physical book or [Chapters 1.13, 2.1 - 2.3 of the electronic version](https://runestone.academy/ns/books/published/pythonds/index.html).
 
 If you run into any issues or have questions, please don't hesitate to post on the forum.
