--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -20,6 +20,9 @@ Complete and submit your answers on Gradescope for **H02** based on the textbook
 Reading is from Chapters 
 - 1.4.6 (Object-Oriented Programming in Python: Defining Classes),
 - 2.1 - 2.2.1 (2.1. Objectives; 2.2. What Is Algorithm Analysis?; 2.2.1. Big-O Notation) of the physical book
-or [Chapters 1.13, 2.1 - 2.3 of the electronic version](https://runestone.academy/ns/books/published/pythonds/index.html).
+  
+or [Chapters 1.13, 3.1 - 3.3 of the electronic version](https://runestone.academy/ns/books/published/pythonds/index.html).
+
+Note that the electronic chapter numbers are different if you are using an alternative electronic textbook, such as <https://www.openbookproject.net/books/pythonds/AlgorithmAnalysis/BigONotation.html>.
 
 If you run into any issues or have questions, please don't hesitate to post on the forum.
