--- a/_hwk/h05.md
+++ b/_hwk/h05.md
@@ -2,7 +2,7 @@
 num: 'h05'
 layout: lab
 desc: 'Ordered Linked Lists, Sequential / Binary Search, Bubble / Selection / Insertion sort Chapter 4.22 - 4.23, 6.1 - 6.4, 6.6 - 6.9'
-ready: false
+ready: true
 assigned: 2025-05-05 08:00:00 -0700
 due: 2025-05-13 23:59:00 -0700
 ---
