--- a/_hwk/h07.md
+++ b/_hwk/h07.md
@@ -2,7 +2,7 @@
 num: 'h07'
 layout: lab
 desc: 'Priority Queues / Heaps Chapter 7.8 - 7.10'
-ready: false
+ready: true
 assigned: 2025-05-19 08:00:00 -0700
 due: 2025-05-27 23:59:00 -0700
 ---
