--- a/_hwk/h04.md
+++ b/_hwk/h04.md
@@ -2,7 +2,7 @@
 num: 'h04'
 layout: lab
 desc: 'Stacks, Queues, Deques, Linked Lists Chapter 4.1 - 4.7, 4.10 - 4.13, 4.15 - 4.21'
-ready: false
+ready: true
 assigned: 2025-04-28 08:00:00 -0700
 due: 2025-05-06 23:59:00 -0700
 ---
