--- a/_hwk/h06.md
+++ b/_hwk/h06.md
@@ -2,7 +2,7 @@
 num: 'h06'
 layout: lab
 desc: 'Merge Sort, Quick Sort, Trees Chapter 6.11 - 6.12, 7.1 - 7.3'
-ready: false
+ready: true
 assigned: 2025-05-12 08:00:00 -0700
 due: 2025-05-20 23:59:00 -0700
 ---
