--- a/_hwk/h08.md
+++ b/_hwk/h08.md
@@ -2,7 +2,7 @@
 num: 'h08'
 layout: lab
 desc: 'Binary Trees / Binary Search Trees Chapter 7.5, 7.7, 7.11 - 7.14'
-ready: false
+ready: true
 assigned: 2025-05-26 08:00:00 -0700
 due: 2025-06-03 23:59:00 -0700
 ---
